--- a/popup/styles.css
+++ b/popup/styles.css
@@ -27,7 +27,7 @@ main {
 }
 
 /* Options */
-#settings {
+a#settings {
     text-decoration: none;
     color: var(--foreground);
 }
